--- a/tox.ini
+++ b/tox.ini
@@ -19,9 +19,9 @@ extras =
     doc
     dev
 commands =
-    isort <package-name-underscore>
-    black <package-name-underscore> tests
-    flake8 <package-name-underscore> tests
+    isort bi_tiktok_business_api_master
+    black bi_tiktok_business_api_master tests
+    flake8 bi_tiktok_business_api_master tests
     poetry build
     mkdocs build
     twine check dist/*
@@ -35,4 +35,4 @@ setenv =
     PYTHONPATH = {toxinidir}
     PYTHONWARNINGS = ignore
 commands =
-    pytest -s --cov=<package-name-underscore> --cov-append --cov-report=xml --cov-report term-missing tests
+    pytest -s --cov=bi_tiktok_business_api_master --cov-append --cov-report=xml --cov-report term-missing tests
